--- a/app/src/main/res/layout/activity_emergency_contacts.xml
+++ b/app/src/main/res/layout/activity_emergency_contacts.xml
@@ -4,153 +4,226 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     tools:context=".EmergencyContacts">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="26dp"
+        android:layout_height="27dp"
+        android:background="@drawable/back1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.031"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:context=".EmergencyNumbersActivity2">
+        app:layout_constraintVertical_bias="0.025" />
 
-        <TextView
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:background="@drawable/btn2"
-            android:fontFamily="sans-serif-condensed"
-            android:paddingStart="16dp"
-            android:paddingTop="110dp"
-            android:text="Emergency Contacts"
-            android:textAllCaps="true"
-            android:textColor="#ffffff"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:paddingLeft="16dp" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/toolbar"
-            android:layout_marginTop="90dp"
-            android:layout_marginStart="32dp"
-            android:orientation="horizontal"
-            android:layout_marginLeft="32dp">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/toolbar"
-                android:orientation="vertical">
+    <TextView
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@drawable/emercencycontacts"
+        android:fontFamily="sans-serif-condensed"
+        android:paddingStart="16dp"
+        android:paddingLeft="16dp"
+        android:paddingTop="110dp"
+        android:textAllCaps="true"
+        android:textColor="#ffffff"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
 
-                <TextView
-                    android:id="@+id/TextView1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:layout_margin="12dp"
-                    android:paddingTop="12dp"
-                    android:text="Police"
-                    android:textAlignment="center"
-                    android:textColor="#000000"
-                    android:textSize="16sp"
-                    android:gravity="center_horizontal" />
+    <TextView
+        android:id="@+id/TextView1"
+        android:layout_width="400dp"
+        android:layout_height="70dp"
+        android:layout_margin="12dp"
+        android:background="@drawable/emergencynumber"
+        android:gravity="center_horizontal"
+        android:paddingTop="12dp"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.144"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.132" />
 
-                <TextView
-                    android:id="@+id/TextView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:layout_margin="12dp"
-                    android:paddingTop="12dp"
-                    android:text="Rescue Team "
-                    android:textAlignment="center"
-                    android:textColor="#000000"
-                    android:textSize="16sp"
-                    android:gravity="center_horizontal" />
+    <TextView
+        android:id="@+id/TextView2"
+        android:layout_width="400dp"
+        android:layout_height="50dp"
+        android:background="@drawable/police"
+        android:gravity="center_horizontal"
+        android:paddingTop="12dp"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.275" />
 
-                <TextView
-                    android:id="@+id/TextView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:layout_margin="12dp"
-                    android:paddingTop="12dp"
-                    android:text="Counter Terrorism"
-                    android:textAlignment="center"
-                    android:textColor="#000000"
-                    android:textSize="16sp"
-                    android:gravity="center_horizontal" />
-
-                <TextView
-                    android:id="@+id/TextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:layout_margin="12dp"
-                    android:paddingTop="12dp"
-                    android:text="Motorway Police"
-                    android:textAlignment="center"
-                    android:textColor="#000000"
-                    android:textSize="16sp"
-                    android:gravity="center_horizontal" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/toolbar"
-                android:orientation="vertical">
+    <TextView
+        android:id="@+id/TextView3"
+        android:layout_width="400dp"
+        android:layout_height="50dp"
+        android:background="@drawable/ambulance"
+        android:gravity="center_horizontal"
+        android:paddingTop="12dp"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.379" />
 
 
-                <Button
-                    android:id="@+id/police"
-                    android:layout_width="100dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="12dp"
-                    android:background="@drawable/btn2"
-                    android:text="102"
-                    android:textColor="#ffffff"
-                    android:textSize="20sp" />
+    <TextView
+        android:id="@+id/TextView"
+        android:layout_width="400dp"
+        android:layout_height="50dp"
+        android:background="@drawable/firestation"
+        android:gravity="center_horizontal"
+        android:paddingTop="12dp"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.481" />
 
-                <Button
-                    android:id="@+id/rescue"
-                    android:layout_width="100dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="12dp"
-                    android:background="@drawable/btn2"
-                    android:text="112"
-                    android:textColor="#ffffff"
-                    android:textSize="20sp" />
+    <TextView
+        android:id="@+id/TextView4"
+        android:layout_width="400dp"
+        android:layout_height="47dp"
+        android:background="@drawable/womenhelpline"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.589" />
 
-                <Button
-                    android:id="@+id/counter_T"
-                    android:layout_width="100dp"
-                    android:layout_height="50dp"
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="400dp"
+        android:layout_height="50dp"
+        android:background="@drawable/roadaccident"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.696" />
 
-                    android:layout_margin="12dp"
+    <Button
+        android:id="@+id/nen"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:background="@drawable/no1"
+        android:textColor="#ffffff"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.881"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.174" />
 
-                    android:background="@drawable/btn2"
-                    android:text="100"
-                    android:textColor="#ffffff"
-                    android:textSize="20sp" />
+    <Button
+        android:id="@+id/police"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:background="@drawable/no2"
+        android:textColor="#ffffff"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.881"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.274" />
 
-                <Button
-                    android:id="@+id/motorway_police"
-                    android:layout_width="100dp"
-                    android:layout_height="50dp"
+    <Button
+        android:id="@+id/ambulance"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:background="@drawable/no3"
+        android:textColor="#ffffff"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.881"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.379" />
 
-                    android:layout_margin="12dp"
-                    android:background="@drawable/btn2"
-                    android:text="181"
-                    android:textColor="#ffffff"
-                    android:textSize="20sp" />
+    <Button
+        android:id="@+id/fire_station"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:background="@drawable/no4"
+        android:textColor="#ffffff"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.881"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.481" />
 
-            </LinearLayout>
-        </LinearLayout>
+    <Button
+        android:id="@+id/women_helpline"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:background="@drawable/no5"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.881"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.586" />
 
+    <Button
+        android:id="@+id/road_accident"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:background="@drawable/no6"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.881"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.694" />
 
-    </RelativeLayout>
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:background="@drawable/applogo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.991" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
