--- a/app/src/main/res/layout/activity_weight.xml
+++ b/app/src/main/res/layout/activity_weight.xml
@@ -1,67 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="0dp"
-    >
+    android:background="#000000"
+    android:layout_margin="0dp">
+
+    <Button
+        android:layout_width="30dp"
+        android:layout_height="40dp"
+        android:background="@drawable/back1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textView2"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:background="@drawable/redrectangle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="25dp"
-        android:layout_marginRight="25dp"
-        >
+        android:layout_marginRight="25dp">
 
         <EditText
             android:id="@+id/weight"
             android:layout_width="370dp"
             android:layout_height="45dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="15dp"
             android:hint="Weight (in kg)"
             android:inputType="number"
-            android:paddingLeft="8dp"
-            />
-        '
+            android:background="@drawable/whitetextbox"
+            android:layout_marginTop="50dp"
+            android:paddingLeft="8dp" />
 
         <EditText
             android:id="@+id/height"
             android:layout_width="370dp"
             android:layout_height="45dp"
             android:layout_below="@id/weight"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="26dp"
+            android:background="@drawable/whitetextbox"
             android:hint="Height (in cm)"
             android:inputType="number"
             android:paddingLeft="8dp" />
 
         <Button
             android:id="@+id/risk_analysis"
-            android:layout_width="140dp"
-            android:layout_height="wrap_content"
+            android:layout_width="136dp"
+            android:layout_height="50dp"
             android:layout_below="@id/height"
-            android:layout_marginTop="14dp"
-            android:layout_marginRight="85dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginRight="82dp"
             android:layout_toLeftOf="@id/calculate_btn"
+            android:background="@drawable/calculatebtn"
             android:onClick="calculateRFM"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:text="Risk Analysis"
-            android:textColor="#3D155F"
+            android:textColor="#ffffff"
             android:visibility="invisible" />
 
         <Button
             android:id="@+id/calculate_btn"
             android:layout_width="136dp"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_below="@id/height"
             android:layout_alignParentRight="true"
-            android:layout_marginTop="12dp"
-            android:layout_marginRight="0dp"
+            android:layout_marginTop="26dp"
+            android:layout_marginRight="8dp"
+            android:background="@drawable/calculatebtn"
             android:onClick="calculateRFM"
-            android:text="CALCULATE"
-            android:textColor="#3D155F" />
+            android:text="Calculate"
+            android:textColor="#ffffff" />
 
         <TextView
             android:id="@+id/result"
@@ -69,13 +91,14 @@
             android:layout_height="300dp"
             android:layout_below="@id/calculate_btn"
             android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="3dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginTop="28dp"
+            android:background="#ffffff"
             android:paddingLeft="8dp"
             android:textSize="14sp"
-            android:visibility="invisible"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="3dp" />
+            android:visibility="invisible" />
     </RelativeLayout>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
